# langchain

./: pyproject.toml
agents/: agents.ipynb
api/: api.txt  client.py  main.py
langchain_bot/: lama.py  main.py
rag/: rag.ipynb
